@@ -1,0 +1,38 @@
+# Generated by Django 2.2.15 on 2021-01-28 15:53
+
+from django.db import migrations, models
+
+
+class Migration(migrations.Migration):
+
+    dependencies = [
+        ('app_orders', '0084_ordershipment_delivery_tax_number'),
+    ]
+
+    operations = [
+        migrations.AlterField(
+            model_name='order',
+            name='delivery_address_1',
+            field=models.CharField(blank=True, max_length=35),
+        ),
+        migrations.AlterField(
+            model_name='order',
+            name='delivery_address_2',
+            field=models.CharField(blank=True, max_length=35),
+        ),
+        migrations.AlterField(
+            model_name='order',
+            name='delivery_city',
+            field=models.CharField(blank=True, max_length=35),
+        ),
+        migrations.AlterField(
+            model_name='order',
+            name='delivery_firstname',
+            field=models.CharField(blank=True, max_length=35),
+        ),
+        migrations.AlterField(
+            model_name='order',
+            name='delivery_lastname',
+            field=models.CharField(blank=True, max_length=35),
+        ),
+    ]
