@@ -135,11 +135,11 @@ class Order(models.Model):
     billing_country = models.CharField(max_length=200, blank=True)
     billing_email = models.ForeignKey('app_products.customer', to_field='billing_email', db_column='billing_email', on_delete=models.CASCADE, blank=True, null=True)
     billing_phone = models.CharField(max_length=200, blank=True)
-    delivery_firstname = models.CharField(max_length=200, blank=True) 
-    delivery_lastname = models.CharField(max_length=200, blank=True) 
-    delivery_address_1 = models.CharField(max_length=200, blank=True)
-    delivery_address_2 = models.CharField(max_length=200, blank=True)
-    delivery_city = models.CharField(max_length=200, blank=True)
+    delivery_firstname = models.CharField(max_length=35, blank=True) 
+    delivery_lastname = models.CharField(max_length=35, blank=True) 
+    delivery_address_1 = models.CharField(max_length=35, blank=True)
+    delivery_address_2 = models.CharField(max_length=35, blank=True)
+    delivery_city = models.CharField(max_length=35, blank=True)
     delivery_postcode = models.CharField(max_length=200, blank=True)
     delivery_country = models.CharField(max_length=200, blank=True)
     delivery_country_code = models.CharField(max_length=5, blank=True)
