@@ -1,0 +1,18 @@
+# Generated by Django 2.2.15 on 2021-01-29 15:32
+
+from django.db import migrations, models
+
+
+class Migration(migrations.Migration):
+
+    dependencies = [
+        ('app_products', '0115_product_last_stock_check'),
+    ]
+
+    operations = [
+        migrations.AlterField(
+            model_name='product',
+            name='last_stock_check',
+            field=models.DateTimeField(blank=True, null=True),
+        ),
+    ]
