@@ -1,0 +1,22 @@
+# Generated by Django 2.2.15 on 2021-01-29 15:45
+
+from django.db import migrations
+
+
+class Migration(migrations.Migration):
+
+    dependencies = [
+        ('app_products', '0116_auto_20210129_1532'),
+    ]
+
+    operations = [
+        migrations.AlterModelOptions(
+            name='magentoproductsync',
+            options={'ordering': ['has_synced', 'id']},
+        ),
+        migrations.RenameField(
+            model_name='magentoproductsync',
+            old_name='synced',
+            new_name='has_synced',
+        ),
+    ]
