@@ -6,6 +6,7 @@ import requests
 import json
 import pdfkit
 import wkhtmltopdf
+from django.utils import timezone
 
 ### SHIPTHEORY TOKEN ###
 # REFRESH THE BEARER TOKEN AND ADD TO CONFIG VARS IN HEROKU
@@ -48,7 +49,25 @@ def xero_token_task(request):
     print("Xero Token Task Complete")
     print('######')
 
-
+### MAGENTO STOCK SYNC ###
+# UPDATE THE STOCK VALUE IN MAGENTO 
+def magento_sync(reqeust): 
+    now = datetime.datetime.now(tz=timezone.utc)
+    sync_products = MagentoProductSync.objects.filter(has_synced=False)
+    # LOOP TO POST TO MAGENTO
+    for product in sync_products:
+        payload='{"product_id":"'+str(product.product_id)+'","stock_qty":"'+str(product.stock_qty)+'"}'
+        response = requests.request("POST", settings.MAGENTO_URL, headers=settings.MAGENTO_HEADERS, data=payload)
+        # MAGENTOPRODUCTSYNC - UPDATE HAS_SYNCED TO TRUE AND DATE_SYNCED
+        has_updated = json.loads(response.text)['updated']
+        if has_updated == True:
+            product.has_synced = True
+            product.date_synced = now
+            product.save()
+        print(response.text)    
+    print('######')
+    print(sync_products.count(), 'Products synced with Magento')
+    print('######')
 
 
 ### CURRENTLY NOT ACTIVE ###
